--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
@@ -8,7 +8,7 @@
 
 For small rate matrices, transition probabilities of beginning in state $i$ and ending in state $j$ equal the matrix exponential of the underlying rate matrix, scaled by the elapsed time of the process.
 This integrates over all unobserved transition events during the time interval $t$.
-Unfortunately, computing the matrix exponential scales poorly as the state space increases, i.e. $O(n^4)$ for $n$ states.
+Unfortunately, computing the matrix exponential scales poorly as the state space increases, \IE $O(n^4)$ for $n$ states.
 
 Alternatively, the probability of beginning in state $i$ and ending in state $j$ can be computed easily when the explicit series of event types and times are known.
 While we will never know the exact history of events, we can use stochastic mapping in conjunction with Markov chain Monte Carlo (MCMC) to repeatedly sample range evolution histories that are consistent with the ranges observed in the study taxa at the tips of the phylogeny.
@@ -64,23 +64,15 @@ See \citet{landis13} for a full description of the model.
 
 \subsection{Specifying a data augmented DEC model}
 
-As previously, start by setting your working directory,
+
+Start to create helper variables for file handling,
 
 \begin{snugshade}
 \begin{lstlisting}
-setwd("/Users/arwallace/projects/RB_Biogeography_tutorial/")
-\end{lstlisting}
-\end{snugshade}
-
-then create helper variables for file handling,
-
-\begin{snugshade}
-\begin{lstlisting}
-fp      = "./"
-area_fn = fp + "data/earth25.still.atlas.txt"
-data_fn = fp + "data/primates_bg_n25.nex"
-tree_fn = fp + "data/primates.tree"
-out_str = "bg_3"
+area_fn = "data/earth25.still.atlas.txt"
+data_fn = "data/primates_bg_n25.nex"
+tree_fn = "data/primates.tree"
+out_fn = "output/bg_3"
 \end{lstlisting}
 \end{snugshade}
 
@@ -88,7 +80,7 @@ read in our tree,
 
 \begin{snugshade}
 \begin{lstlisting}
-tree  <- readTrees(in_fp + data_fn)[1]
+psi  <- readTrees( tree_fn )[1]
 \end{lstlisting}
 \end{snugshade}
 
@@ -96,7 +88,7 @@ populate our range observations,
 
 \begin{snugshade}
 \begin{lstlisting}
-data    = readDiscreteCharacterData(in_fp + data_fn)
+data    = readDiscreteCharacterData( data_fn )
 \end{lstlisting}
 \end{snugshade}
 
@@ -104,7 +96,7 @@ and read in our geographical information (for details, see Section XX).
 
 \begin{snugshade}
 \begin{lstlisting}
-atlas   = readAtlas(in_fp + area_fn)
+atlas   = readAtlas( area_fn)
 n_areas = atlas.nAreas()
 \end{lstlisting}
 \end{snugshade}
@@ -113,8 +105,7 @@ Lastly, create index variables to populate our move and monitor vectors,
 
 \begin{snugshade}
 \begin{lstlisting}
-mvi = 1
-mni = 1
+mi = 0
 \end{lstlisting}
 \end{snugshade}
 
@@ -130,12 +121,12 @@ To later interpret ancestral state monitors phylogenetically, save a copy of {\t
 
 \begin{snugshade}
 \begin{lstlisting}
-write(tree,filename=tree_fn+".index.tre")
+write(psi,filename=tree_fn+".index.tre")
 \end{lstlisting}
 \end{snugshade}
 
 Proceeding with the model configuration, we'll first create our rate matrix that determines the rate of per-area gain and loss given the current geographical layout of the range.
-In RevBayes, data-augmented CTMC analyses require {\tt RateMap} functions to determine event rates, which differ from the familiar {\tt RateMatrix} functions that include {\tt fnJC} and {\tt fnGTR} as members.
+In \RevBayes, data-augmented CTMC analyses require {\tt RateMap} functions to determine event rates, which differ from the familiar {\tt RateMatrix} functions that include {\tt fnJC} and {\tt fnGTR} as members.
 In their simplest form, {\tt RateMap} functions generate the rates of change over the full set of characters, where each character evolves according to a provided {\tt RateMatrix} function.
 Additionally, a {\tt RateMap} accepts a rate modifier function that induces some correlation structure to character change evolution.
 In this section, we'll be creating a biogeographic {\tt RateMap} function for the dispersal-extinction process given in Section \ref{sec:rate_map}.
@@ -144,8 +135,8 @@ First, create a biogeographical clock to scale the rate of range evolution.
 
 \begin{snugshade}
 \begin{lstlisting}
-clock_bg ~ dnExp(10)
-moves[mvi++] = mvScale(clock_bg, lambda=0.5, weight=5.0)
+clock_bg ~ dnExponential(10)
+moves[++mi] = mvScale(clock_bg, lambda=0.5, weight=5.0)
 \end{lstlisting}
 \end{snugshade}
 
@@ -154,7 +145,7 @@ Next, instantiate a simplex of gain and loss rates, distributed by a flat Dirich
 \begin{snugshade}
 \begin{lstlisting}
 glr ~ dnDirichlet([1,1])
-moves[mvi++] = mvSimplexElementScale(glr, alpha=30.0, weight=5.0)
+moves[++mi] = mvSimplexElementScale(glr, alpha=30.0, weight=5.0)
 \end{lstlisting}
 \end{snugshade}
 
@@ -167,7 +158,7 @@ r_loss := glr[2]
 \end{lstlisting}
 \end{snugshade}
 
-Insert the simplex into the rate matrix {\tt $q_area$}, which gives the average rate of area gain and loss per area.
+Insert the simplex into the rate matrix {\tt $q_{area}$}, which gives the average rate of area gain and loss per area.
 
 \begin{snugshade}
 \begin{lstlisting}
@@ -183,7 +174,7 @@ We'll use an exponential distribution with mean 1.0 as a prior for {\tt dp}.
 \begin{snugshade}
 \begin{lstlisting}
 dp ~ dnExponential(10.0)
-moves[mvi++] = mvScale(x=dp, lambda=0.5, tune=true, weight=5.0)
+moves[++mi] = mvScale(x=dp, lambda=0.5, tune=true, weight=5.0)
 \end{lstlisting}
 \end{snugshade}
 
@@ -216,7 +207,7 @@ clado_prob ~ dnDirichlet( [1, 1, 1] )
 widespread_sympatry := clado_prob[1]
 subset_sympatry     := clado_prob[2]
 allopatry           := clado_prob[3]
-moves[mvi++] = mvSimplexElementScale(clado_prob, alpha=20.0, weight=5.0)
+moves[++mi] = mvSimplexElementScale(clado_prob, alpha=20.0, weight=5.0)
 \end{lstlisting}
 \end{snugshade}
 
@@ -225,7 +216,7 @@ To create the distribution, we must pass it our {\tt tree} and {\tt q\_range} ob
 
 \begin{snugshade}
 \begin{lstlisting}
-m ~ dnPhyloDACTMC(tree=tree, Q=q_range, cladoProbs=clado_prob, type="Biogeo", forbidExtinction=true, useCladogenesis=true)
+m ~ dnPhyloDACTMC(tree=psi, Q=q_range, cladoProbs=clado_prob, type="Biogeo", forbidExtinction=true, useCladogenesis=true)
 \end{lstlisting}
 \end{snugshade}
 
@@ -237,7 +228,7 @@ Now {\tt m} has a defined likelihood value.
 \begin{lstlisting}
 m.clamp(data)
 m.lnProbability()
-   -156.0288
+|*   -156.0288
 \end{lstlisting}
 \end{snugshade}
 
@@ -260,8 +251,10 @@ Let's create the character history moves as follows: conservative character hist
 
 \begin{snugshade}
 \begin{lstlisting}
-moves[mvi++] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=tree, lambda=0.05, type="Biogeo", graph="node", proposal="rejection", weight=100.0)
-moves[mvi++] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=tree, lambda=0.05, type="Biogeo", graph="branch", proposal="rejection", weight=100.0)
+moves[++mi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.05, 
+          type="Biogeo", graph="node", proposal="rejection", weight=100.0)
+moves[++mi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.05, 
+          type="Biogeo", graph="branch", proposal="rejection", weight=100.0)
 \end{lstlisting}
 \end{snugshade}
 
@@ -269,8 +262,10 @@ and the same proposals for more radical character history updates, with {\tt lam
 
 \begin{snugshade}
 \begin{lstlisting}
-moves[mvi++] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=tree, lambda=1.0, type="Biogeo", graph="node", proposal="rejection", weight=40.0)
-moves[mvi++] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=tree, lambda=1.0, type="Biogeo", graph="branch", proposal="rejection", weight=40.0)
+moves[++mi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=1.0, 
+          type="Biogeo", graph="node", proposal="rejection", weight=40.0)
+moves[++mi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=1.0, 
+          type="Biogeo", graph="branch", proposal="rejection", weight=40.0)
 \end{lstlisting}
 \end{snugshade}
 
@@ -286,8 +281,8 @@ and monitors for our simple parameters.
 
 \begin{snugshade}
 \begin{lstlisting}
-monitors[mni++] = mnScreen(clock_bg, r_gain, r_loss, dp, subset_sympatry, allopatry, widespread_sympatry, printgen=100)
-monitors[mni++] = mnFile(clock_bg, r_gain, r_loss, dp, subset_sympatry, allopatry, widespread_sympatry, filename=out_fn+".params.txt", printgen=10)
+monitors[1] = mnScreen(clock_bg, r_gain, r_loss, dp, subset_sympatry, allopatry, widespread_sympatry, printgen=100)
+monitors[2] = mnFile(clock_bg, r_gain, r_loss, dp, subset_sympatry, allopatry, widespread_sympatry, filename=out_fn+".params.txt", printgen=10)
 \end{lstlisting}
 \end{snugshade}
 
@@ -301,8 +296,8 @@ How to read these file formats will be discussed in more detail in Section \ref{
 
 \begin{snugshade}
 \begin{lstlisting}
-monitors[mni++] = mnCharHistoryNewick(filename=out_fn+".events.txt", ctmc=m, tree=tree, printgen=100, style="events")
-monitors[mni++] = mnCharHistoryNewick(filename=out_fn+".counts.txt", ctmc=m, tree=tree, printgen=100, style="counts")
+monitors[3] = mnCharHistoryNewick(filename=out_fn+".events.txt", ctmc=m, tree=psi, printgen=100, style="events")
+monitors[4] = mnCharHistoryNewick(filename=out_fn+".counts.txt", ctmc=m, tree=psi, printgen=100, style="counts")
 
 \end{lstlisting}
 \end{snugshade}
@@ -313,7 +308,7 @@ We will also discuss this file's format in more detail later in the tutorial.
 
 \begin{snugshade}
 \begin{lstlisting}
-monitors[mni++] = mnCharHistoryNhx(filename=out_fn+".phw.txt", ctmc=m, tree=tree, atlas=atlas, samplegen=100, maxgen=ngen, burnin=0.5)
+monitors[5] = mnCharHistoryNhx(filename=out_fn+".phw.txt", ctmc=m, tree=psi, atlas=atlas, samplegen=100, maxgen=ngen, burnin=0.5)
 \end{lstlisting}
 \end{snugshade}
 
@@ -335,6 +330,10 @@ my_mcmc.run(generations=ngen)
 
 The posterior surface over character histories is highly multimodal, so this analysis takes a long time to mix.
 If you're following this tutorial in a lab setting, you should proceed using the pre-analysed output files provided in {\tt ./completed\_output}.
+
+
+
+
 
 \subsection{Analysis output}
 \label{sec:bg_out}
@@ -407,7 +406,7 @@ Although we have stochastic mappings under the posterior distribution, the remai
 ...
 
 >>> from bg_parse import *
->>> d=get_events(fn="../output/bg_3.events.txt")
+>>> dd=get_events(fn="../output/bg_3.events.txt")
 \end{lstlisting}
 \end{snugshade}
 
@@ -417,9 +416,9 @@ The first key corresponds to the node (branch) whose MCMC samples you'd like to 
 \begin{snugshade}
 \begin{lstlisting}
 >>> dd[42].keys()
-['ch1', 'iteration', 'bn', 'nd', 'ch0', 'prior', 'posterior', 'pa', 'cs', 'ev', 'likelihood']
+|*  ['ch1', 'iteration', 'bn', 'nd', 'ch0', 'prior', 'posterior', 'pa', 'cs', 'ev', 'likelihood']
 >>> dd[42]['cs'][-5:]
-['widespread_sympatry', 'widespread_sympatry', 'widespread_sympatry', 'widespread_sympatry', 'widespread_sympatry']
+|*  ['widespread_sympatry', 'widespread_sympatry', 'widespread_sympatry', 'widespread_sympatry', 'widespread_sympatry']
 \end{lstlisting}
 \end{snugshade}
 
