Updating the biogeography tutorial pdf

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
@@ -439,7 +439,7 @@ This file summarizes the MCMC output from a RevBayes biogeographical analysis as
 
 \noindent \\ \impmark Open \texttt{http://mlandis.github.io/phylowood}.
 
-\noindent \\ \impmark Drag and drop \texttt{./output/bg\_3.nhx.txt} into the text field.
+\noindent \\ \impmark Drag and drop \texttt{./output/bg\_3.phw.txt} into the text field.
 
 \begin{figure}[H]
 \centering
