--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -6,13 +6,16 @@ These models will rely on presence-absence data, where a species is observed or 
 For example, say there are three areas: A, B, and C.
 Say a species is present in areas A and C, then its range equals AC, which can also be encoded into the length-3 bit vector, 101.
 Bit vectors may also be transformed into (decimal) integers, \EG the binary number 101 equals the decimal number 5.
+\[
+( \emptyset, A, B, AB, C, AC, BC, ABC ) \Leftrightarrow (000,100,010,110,101,011,111) \Leftrightarrow ( 0, 1, 2, 3, 4, 5, 6, 7 )
+\]
 Typically, decimal representation is not used in discussion, but it is useful to keep in mind when considering the total number of possible ranges for a species.
 
 \subsection{Modeling anagenic range evolution}
 
 How might we model the dynamics of species range evolution?
 In this section, we'll cover the Dispersal-Extinction-Cladogenesis model proposed by \citet{ree05}.
-To begin, we'll focus on anagenesis, evolution that occurs between speciation events.
+To begin, we'll focus on anagenesis: evolution that occurs between speciation events within lineages.
 Since we have discrete characters we'll use the continuous-time Markov chain, which allows us to compute transition probability of a character changing from $i$ to $j$ in time $t$ through matrix exponentiation
 \[
 \mathbf{P}_{i,j}(t) = \left[ \exp \left\lbrace \mathbf{Q}t \right\rbrace \right]_{i,j},
@@ -23,31 +26,33 @@ Exponentiation of the rate matrix is powerful because it integrates over all pos
 
 We can then encode ${\bf Q}$ to reflect the allowable classes of range evolution events with biologically meaningful parameters.
 We'll take a simple model of range expansion (e.g. $BC \rightarrow ABC$) and range contraction (e.g. $BC \rightarrow C$).
-(Range expansion may also be referred to as dispersal or area gain and range contraction as extirpation or area loss.)
+(Range expansion may also be referred to as dispersal or area gain and range contraction as extirpation, (local) extinction, or area loss.)
 The rates in the transition matrix for three areas might appear as
 
 \[
 \textbf{Q} = 
 	\begin{array}{c|cccccccc}
-		& \emptyset & A & B & C & AB & AC & BC & ABC \\
+		& \emptyset & A & B & AB & C & AC & BC & ABC \\
 		\hline
-		\emptyset & - & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-		A & e_A & - & 0 & 0 & d_{AB} & d_{AC} & 0 & 0 \\
-		B & e_B & 0 & - & 0 & d_{BA} & 0 & d_{BC} & 0 \\
-		C & e_C & 0 & 0 & - & 0 & d_{CA} & d_{CB} & 0 \\
-		AB & 0 & e_B & e_A & 0 & - & 0 & 0 & d_{AC} + d_{BC} \\
-		AC & 0 & e_C & 0 & e_A & 0 & - & 0 & d_{AB} + d_{CB} \\
-		BC & 0 & 0 & e_C & e_B & 0 & 0 & - & d_{BA} + d_{CA} \\
-		ABC & 0 & 0 & 0 & 0 & e_C & e_B & e_A & - \\								
+		\emptyset 	& - 	& 0 	& 0 	& 0 		& 0			& 0 		& 0 		& 0 \\
+		A 			& e_A 	& - 	& 0 	& d_{AB} 	& 0			& d_{AC} 	& 0 		& 0 \\
+		B 			& e_B 	& 0 	& - 	& d_{BA}	& 0			& 0 		& d_{BC} 	& 0 \\
+		AB 			& 0 	& e_B 	& e_A 	& - 		& 0			& 0 		& 0 		& d_{AC} + d_{BC} \\
+		C 			& e_C 	& 0 	& 0 	& 0 		& - 		& d_{CA} 	& d_{CB} 	& 0 \\
+		AC 			& 0 	& e_C 	& 0 	& 0 		& e_A		& - 		& 0 		& d_{AB} + d_{CB} \\
+		BC 			& 0 	& 0 	& e_C 	& 0 		& e_B		& 0 		& - 		& d_{BA} + d_{CA} \\
+		ABC 		& 0 	& 0 	& 0 	& e_C 		& 0 		& e_B 		& e_A 		& - \\								
 	\end{array},
 \]
 where $e = ( e_A, e_B, e_C )$ are the (local) extinction rates per area, and $d = ( d_{AB}, d_{AC}, d_{BC}, d_{CB}, d_{CA}, d_{BA})$ are the dispersal rates between areas.
+Notice that the sum of rates leaving state $\emptyset$ is zero, meaning any species that loses all areas in its range remains permanently extinct.
 
-{\bf \framebox{?} For the three-area DEC rate matrix above, what is the rate of leaving state 101 (which is the coded state for range AB)? That is, what is the absolute value of the diagonal term in the rate matrix for $Q_{AB,AB}$, because the diagonal term is equal to minus the sum of all other entries in the row? }
+
+{\bf \framebox{?} For the three-area DEC rate matrix above, what is the rate of leaving state AC in terms of dispersal and extinction parameters?}
 
 Note the rate of more than one event occurring simultaneously is zero, so a range must expand twice by one area in order to expand by two areas.
 
-{\bf \framebox{?} What series of events might explain a transition from range $ABC$ to range $A$? From range $AB$ to range $C$?}
+{\bf \framebox{?} What series of transition events might explain a lineage evolving from range $ABC$ to range $A$? From range $AB$ to range $C$?}
 
 Of course, this model can be specified for more than three areas.
 
@@ -56,23 +61,23 @@ Of course, this model can be specified for more than three areas.
 Let's consider what happens to the size of \textbf{Q} when the number of areas, $N$, becomes large.
 For three areas, \textbf{Q} is size $8 \times 8$.
 For ten areas, \textbf{Q} is size $2^{10} \times 2^{10} = 1024 \times 1024$, which approaches the largest size matrices that can be exponentiated in a practical amount of time.
-For twenty areas, \textbf{Q} is size $2^{20} \times 2^{20} \approx 10^6 \times 10^6$, exponentiation is not viable.
+For twenty areas, \textbf{Q} is size $2^{20} \times 2^{20} \approx 10^6 \times 10^6$ and exponentiation is not viable.
 
 
 \subsection{Modeling cladogenic range evolution}
 
-Cladogenesis describes evolutionary change coincident with speciation.
-In some well-studied cases, daughter species are not expected to inherit their ancestral range identically.
+Cladogenesis describes evolutionary change accompanying speciation.
+Daughter species are not expected to inherit their ancestral range identically in general.
 For each internal node in the reconstructed tree, one of two cladogenic events can occur: sympatry or allopatry.
 Say the range of a species is $A$ the moment before speciation occurs at an internal phylogenetic node.
 Since the species range is size one, both daughter lineages necessarily inherit the ancestral species range ($A$).
-In DEC parlance, this is called a narrow sympatry event.
+In DEC parlance, this is called a {\it narrow sympatry} event.
 
 Now suppose the ancestral range is $ABC$.
-Under subset sympatric cladogenesis, one lineage identically inherits the ancestral species range, $ABC$, while the other lineage inherits only a single area, i.e. only $A$ or $B$ or $C$.
-For widspread sympatric cladogenesis, both lineages inherit the ancestral range, $ABC$.
+Under {\it subset sympatric cladogenesis}, one lineage identically inherits the ancestral species range, $ABC$, while the other lineage inherits only a single area, i.e. only $A$ or $B$ or $C$.
+For {\it widspread sympatric cladogenesis}, both lineages inherit the ancestral range, $ABC$.
 
-Under allopatric cladogenesis, the ancestral range is split evenly among daughter lineages, e.g. one lineage may inherit $AB$ and the other inherits $C$.
+Under {\it allopatric cladogenesis}, the ancestral range is split evenly among daughter lineages, e.g. one lineage may inherit $AB$ and the other inherits $C$.
 Both daughter lineages inherit the entire ancestral species range following widespread sympatric cladogenic events.
 For an excellent overview of described state transitions for cladogenic events, see \citet{matzke13}.
 
@@ -83,7 +88,7 @@ For 3 areas, there are 8 states, and thus $8 \times 8 = 64$ probability terms fo
 For cladogenic change, we need transition probabilities for all combinations of states before cladogenesis, after cladogenesis for the left lineage, and after cladogenesis for the right lineage.
 Like above, for three areas, there are 8 states, and $8 \times 8 \times 8 = 512$ cladogenic probability terms.
 
-{\bf \framebox{?} For three areas, 3 + 4 + 18 + 12 possible cladogenesis events. What proportion of terms in the cladogenesis matrix are zero?}
+{\bf \framebox{?} For three areas, there are three narrow, four widespread, 18 subset sympatric events and 12 allopatric cladogenesis events. What proportion of terms in the cladogenesis matrix are zero?}
 
 The DEC model ignores speciation events hidden by extinction or incomplete taxon sampling.
 The probability of cladogenesis and local extinction events would ideally be linked to a birth-death process, as it is in the GeoSSE model \citep{goldberg11}.
@@ -105,16 +110,8 @@ The rest of this section will describe how to run a simple DEC analysis using Re
 
 \subsubsection{Specifying a simple DEC model}
 
-We'll use the primate dataset with 23 taxa. To keep the model simple, we'll discretize their ranges into areas: the New World, Africa, and Eurasia.
+We'll use the primate dataset with 23 taxa. To keep the model simple, we'll discretize their ranges into just three areas: the New World (A), Africa (B), and Eurasia (C).
 For simplicity, we'll assume their phylogeny is time-calibrated, errorless, and fixed.
-
-%First, set your working directory,
-%
-%\begin{snugshade}
-%\begin{lstlisting}
-%setwd("/Users/arwallace/projects/RB_Biogeography_tutorial/")
-%\end{lstlisting}
-%\end{snugshade}
 
 Create some {\tt String} variables for file handling,
 \begin{snugshade}
@@ -129,7 +126,7 @@ then read in our character data,
 
 \begin{snugshade}
 \begin{lstlisting}
-data = readTSVCharacterData(data_fn, type="NaturalNumbers")
+data = readTSVBitsetData(data_fn, type="NaturalNumbers")
 \end{lstlisting}
 \end{snugshade}
 
@@ -146,7 +143,7 @@ Next, compute the number of states from the number of areas
 \begin{snugshade}
 \begin{lstlisting}
 n_areas = 3
-n_states = 2^n_areas
+n_states = floor(2^n_areas)
 \end{lstlisting}
 \end{snugshade}
 
@@ -208,6 +205,7 @@ then assign the between-area dispersal rates as determined by {\tt $r_d$}
 \begin{lstlisting}
 for (i in 1:n_areas) {
     for (j in 1:n_areas) {
+    	d[i][j] <- 0.
         if (i != j) {
             d[i][j] := r_d
         }
@@ -217,21 +215,24 @@ for (i in 1:n_areas) {
 \end{snugshade}
 
 Next, we'll populate the non-zero rate matrix elements.
-Rates are indexed by the natural number value of the range, e.g. the range spanning Eurasia and Africa is coded as 011, which is state 4.
+Rates are indexed by the natural number value of the range (plus one), e.g. the range spanning Eurasia and Africa is coded as 011, which is state 4.
 
 First assign the extinction (range loss) rates
 
 \begin{snugshade}
 \begin{lstlisting}
-r[4][2] := e[2]                 # 011 -> 001 : Extirpate in area 2
-r[4][3] := e[3]                 # 011 -> 010 : Extirpate in area 3
-r[6][2] := e[1]                 # 101 -> 001 : Extirpate in area 1
-r[6][5] := e[3]                 # 101 -> 100 : Extirpate in area 3
-r[7][3] := e[1]                 # 110 -> 010 : Extirpate in area 1
-r[7][5] := e[2]                 # 110 -> 100 : Extirpate in area 2
-r[8][4] := e[1]                 # 111 -> 011 : Extirpate in area 1
-r[8][6] := e[2]                 # 111 -> 101 : Extirpate in area 2
-r[8][7] := e[3]                 # 111 -> 110 : Extirpate in area 3
+r[2][1] := e[1]               # 100 -> 000 : Extirpate in area 1
+r[3][1] := e[2]               # 010 -> 000 : Extirpate in area 2
+r[4][2] := e[2]               # 011 -> 001 : Extirpate in area 2
+r[4][3] := e[3]               # 011 -> 010 : Extirpate in area 3
+r[5][1] := e[3]               # 001 -> 000 : Extirpate in area 3
+r[6][2] := e[1]               # 101 -> 001 : Extirpate in area 1
+r[6][5] := e[3]               # 101 -> 100 : Extirpate in area 3
+r[7][3] := e[1]               # 110 -> 010 : Extirpate in area 1
+r[7][5] := e[2]               # 110 -> 100 : Extirpate in area 2
+r[8][4] := e[1]               # 111 -> 011 : Extirpate in area 1
+r[8][6] := e[2]               # 111 -> 101 : Extirpate in area 2
+r[8][7] := e[3]               # 111 -> 110 : Extirpate in area 3
 \end{lstlisting}
 \end{snugshade}
 
@@ -283,8 +284,19 @@ q := fnFreeK(er, bf)
 \end{lstlisting}
 \end{snugshade}
 
-This yields the desired three-area DEC rate matrix modeling anagenic character change. In contrast, cladogenic event probabilites are given by a transition probability matrix and do not require a rate matrix.
+This yields the desired three-area DEC rate matrix modeling anagenic character change.
+Exposing the structure of the DEC rate matrix is useful when learning about the model, but typically the matrix may be constructed with the following convenience function, provided {\tt d} and {\tt e} are defined.
 
+\begin{snugshade}
+\begin{lstlisting}
+er_nat := fnStructureDispersalExtinction(d, e)
+er := simplex(er_nat)
+bf <- simplex(rep(1,n_states))
+q := fnFreeK(er,bf)
+\end{lstlisting}
+\end{snugshade}
+
+In contrast, cladogenic event probabilites are given by a transition probability matrix and do not require a rate matrix.
 First, we will create a vector of prior weights on cladogenesis events. Here, we assign a flat prior to all cladogenic events
 
 \begin{snugshade}
@@ -357,12 +369,13 @@ mdl = model(m)
 \end{lstlisting}
 \end{snugshade}
 
-Add the monitors.
+Add the monitors. (The {\tt mnJointConditionalAncestralState} monitor will be described in the next section.)
 
 \begin{snugshade}
 \begin{lstlisting}
 mn[1] = mnScreen(clock_bg, d[1][2], d[1][3], d[2][1], d[2][3], d[3][1], d[3][2], e[1], e[2], e[3], widespread_sympatry, subset_sympatry, allopatry, printgen=1000)
 mn[2] = mnFile(clock_bg, d[1][2], d[1][3], d[2][1], d[2][3], d[3][1], d[3][2], e[1], e[2], e[3], widespread_sympatry, subset_sympatry, allopatry, file=out_fn+".params.txt")
+mn[3] = mnJointConditionalAncestralState(tree=psi, ctmc=m, filename=out_fn+".states.txt", type="NaturalNumbers", printgen=10, withTips=true, withStartStates=true)
 \end{lstlisting}
 \end{snugshade}
 
@@ -397,6 +410,7 @@ or give each ordered pair of areas a it's own dispersal rate
 \begin{lstlisting}
 for (i in 1:3) {
     for (j in 1:3) {
+    	d[i][j] <- 0.0
         if (i != j) {
             d[i][j] ~ dnExponential(10.0)
             mv[++mi] = mvScale(d[i][j], weight=5)
@@ -416,7 +430,7 @@ Exercises are independent of each other, except for Exercises 3a and 3b.
 
 \begin{itemize}
 \item 1) Widespread sympatric speciation is thought to be evolutionarily rare. Set the Dirichlet prior on cladogenic event types to heavily disfavor these events. Using Tracer, describe how changing the cladogenesis prior affects the extinction rate when compared with the ``common rate'' model.
-\item 2) Modifying the \RevBayes~script, re-parameterize the rate matrix so ranges may not grow beyond two areas in size.
+\item 2) Modifying the \RevBayes~script, parameterize the rate matrix so ranges may not grow beyond two areas in size. You may use {\tt r:= fnDECRates(e,d,2)} to confirm your results.
 \item 3a) Saving your commands to a file, create a script to produce the ``per-area rate'' model.
 \item 3b) Determine if the data support the ``common rate'' model over the ``per-area rate'' model. Use the stepping stone method to compute marginal likelihoods, which will let you compute Bayes factors for model selection.
 %\item 4) (Advanced) Using what you learned in this tutorial and the CTMC tutorial, perform a joint analysis of molecular and biogeographic evolution for primates. Introduce a common prior for the molecular and biogeographical clocks, e.g.
