--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -2,14 +2,14 @@
 
 \subsection{Range characters}
 
-These models will rely on presence-absence data, where a species is observed or not observed across multiple discrete areas.
+Discrete biogeographical models typically rely on presence-absence data, where a species is observed or not observed across multiple discrete areas.
 For example, say there are three areas: A, B, and C.
 Say a species is present in areas A and C, then its range equals AC, which can also be encoded into the length-3 bit vector, 101.
 Bit vectors may also be transformed into (decimal) integers, \EG the binary number 101 equals the decimal number 5.
 \[
 ( \emptyset, A, B, AB, C, AC, BC, ABC ) \Leftrightarrow (000,100,010,110,101,011,111) \Leftrightarrow ( 0, 1, 2, 3, 4, 5, 6, 7 )
 \]
-Typically, decimal representation is not used in discussion, but it is useful to keep in mind when considering the total number of possible ranges for a species.
+Decimal representation is rarely used in discussion, but it is useful to keep in mind when considering the total number of possible ranges for a species.
 
 \subsection{Modeling anagenic range evolution}
 
@@ -37,7 +37,7 @@ The rates in the transition matrix for three areas might appear as
 		\emptyset 	& - 	& 0 	& 0 	& 0 		& 0			& 0 		& 0 		& 0 \\
 		A 			& e_A 	& - 	& 0 	& d_{AB} 	& 0			& d_{AC} 	& 0 		& 0 \\
 		B 			& e_B 	& 0 	& - 	& d_{BA}	& 0			& 0 		& d_{BC} 	& 0 \\
-		AB 			& 0 	& e_B 	& e_A 	& - 		& 0			& 0 		& 0 		& d_{AC} + d_{BC} \\
+		AB 			& 0 	& e_A 	& e_B 	& - 		& 0			& 0 		& 0 		& d_{AC} + d_{BC} \\
 		C 			& e_C 	& 0 	& 0 	& 0 		& - 		& d_{CA} 	& d_{CB} 	& 0 \\
 		AC 			& 0 	& e_C 	& 0 	& 0 		& e_A		& - 		& 0 		& d_{AB} + d_{CB} \\
 		BC 			& 0 	& 0 	& e_C 	& 0 		& e_B		& 0 		& - 		& d_{BA} + d_{CA} \\
@@ -76,9 +76,8 @@ In DEC parlance, this is called a {\it narrow sympatry} event.
 Now suppose the ancestral range is $ABC$.
 Under {\it subset sympatric cladogenesis}, one lineage identically inherits the ancestral species range, $ABC$, while the other lineage inherits only a single area, i.e. only $A$ or $B$ or $C$.
 For {\it widspread sympatric cladogenesis}, both lineages inherit the ancestral range, $ABC$.
-
 Under {\it allopatric cladogenesis}, the ancestral range is split evenly among daughter lineages, e.g. one lineage may inherit $AB$ and the other inherits $C$.
-Both daughter lineages inherit the entire ancestral species range following widespread sympatric cladogenic events.
+
 For an excellent overview of described state transitions for cladogenic events, see \citet{matzke13}.
 
 {\bf \framebox{?} Given the state is $AB$ before cladogenesis, and allowing subset sympatry, widespread sympatry, and allopatry, what are the 7 possible states in the daughter lineages after cladogenesis?}
@@ -95,11 +94,11 @@ The probability of cladogenesis and local extinction events would ideally be lin
 Unfortunately, since the numerical method for SSE models scale poorly, and DEC models remain the only option when the geography has more than two or three areas.
 For more than ten areas, data augmentation may be used to infer ancestral ranges, as described in Section \ref{sec:bayarea}.
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=5in]{figures/bg_dec_dag}
-\caption{Graphical model of DEC. The tree plate's topology is fixed by $T$, where each internal node has both an anagenic and cladogenic random variable ($X_i^{\text{an}}$ and $X_i^{\text{cl}}$, resp.) that represents an ancestral species before and after it speciated. Anagenic change is modeled by a continuous time Markov process, where $Q_{DE}$ is the instantaneous rate matrix of area gain and loss, as parameterized by $\lambda$. The geographic distance rate modifier function, $\eta$, takes in the geographical distances and strata as $G$, and the distance power parameter, $\beta$. Cladogenic change is modeled by $P_C$, a Dirichlet-distributed simplex with a flat prior.}
-\end{figure}
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=5in]{figures/bg_dec_dag}
+%\caption{Graphical model of DEC. The tree plate's topology is fixed by $T$, where each internal node has both an anagenic and cladogenic random variable ($X_i^{\text{an}}$ and $X_i^{\text{cl}}$, resp.) that represents an ancestral species before and after it speciated. Anagenic change is modeled by a continuous time Markov process, where $Q_{DE}$ is the instantaneous rate matrix of area gain and loss, as parameterized by $\lambda$. The geographic distance rate modifier function, $\eta$, takes in the geographical distances and strata as $G$, and the distance power parameter, $\beta$. Cladogenic change is modeled by $P_C$, a Dirichlet-distributed simplex with a flat prior.}
+%\end{figure}
 
 The rest of this section will describe how to run a simple DEC analysis using RevBayes.
 
@@ -118,15 +117,15 @@ Create some {\tt String} variables for file handling,
 \begin{lstlisting}
 data_fn = "data/primates_bg_n3.tsv"
 tree_fn = "data/primates.tree"
-out_fn  = "output/bg_1"
+out_fn  = "output/bg_same"
 \end{lstlisting}
 \end{snugshade}
 
-then read in our character data,
+then read in our character data, using {\tt type="Bitset"} to indicate ranges are encoded with bits, e.g. 011
 
 \begin{snugshade}
 \begin{lstlisting}
-data = readTSVBitsetData(data_fn, type="NaturalNumbers")
+data = readCharacterDataDelimited(file=data_fn, type="Bitset")
 \end{lstlisting}
 \end{snugshade}
 
@@ -169,7 +168,7 @@ for (i in 1:n_states) {
 
 Now we need to populate the non-zero rate matrix elements, which are in terms of dispersal and extinction rates.
 We'll use one dispersal rate and one extinction rate for this tutorial, and explore more complex models in later sections.
-For later reference, this will be called the ``common rate'' model.
+For later reference, this will be called the ``same rate'' model.
 
 First, create a extinction rate parameter and assign it a scale move
 
@@ -285,11 +284,12 @@ q := fnFreeK(er, bf)
 \end{snugshade}
 
 This yields the desired three-area DEC rate matrix modeling anagenic character change.
-Exposing the structure of the DEC rate matrix is useful when learning about the model, but typically the matrix may be constructed with the following convenience function, provided {\tt d} and {\tt e} are defined.
+Exposing the structure of the DEC rate matrix is useful when learning about the model, which accomplishes the same as {\tt fnDECRates} when provided {\tt d} and {\tt e}. (You do not need to type this.)
 
 \begin{snugshade}
 \begin{lstlisting}
-er_nat := fnStructureDispersalExtinction(d, e)
+# for example
+er_nat := fnDECRates(dispersalRates=d, extinctionRates=e)
 er := simplex(er_nat)
 bf <- simplex(rep(1,n_states))
 q := fnFreeK(er,bf)
@@ -404,7 +404,7 @@ for (i in 1:3) {
 \end{lstlisting}
 \end{snugshade}
 
-or give each ordered pair of areas a it's own dispersal rate
+or give each ordered pair of areas it's own dispersal rate
 
 \begin{snugshade}
 \begin{lstlisting}
@@ -420,9 +420,6 @@ for (i in 1:3) {
 \end{lstlisting}
 \end{snugshade}
 Note that you don't need the global dispersal rate \cl{r\_d} and extinction rate \cl{r\_e} anymore and you can remove the variable from your analysis. \RevBayes~might give you an error message if you have left them in.
-
-This parameterization is identical to matrix introduced in Eq XXX.
-In Section XXX, we'll extend this idea further to parameterize features of range evolution, and incorporate paleogeological information.
 
 \subsection{Exercises}
 
@@ -463,28 +460,13 @@ numNodes = numTips * 2 - 1
 \end{lstlisting}
 \end{snugshade*}}
 
-Instead of having a fixed tree as in the previous, we should now define a \emph{random} tree. We use a birth death prior with prior distributions on the \cl{diversification} rate and \cl{turnover} rate.
-The \cl{diversification} rate corresponds to the rate of growth of the tree and the \cl{turnover} rate corresponds to the rate how quickly a species is replaced by a new one.
-This parametrization has the advantage that we can use meaningful prior distributions from the fossil record.
+Instead of having a fixed tree as in the previous, we should now define a \emph{random} tree. We use a birth death prior with prior distributions on the \cl{speciation} rate and \cl{extinction} rate.
 {\tt \small \begin{snugshade*}
 \begin{lstlisting}
-diversification ~ dnLognormal(0,1)
-turnover ~ dnGamma(4,4)
-\end{lstlisting}
-\end{snugshade*}}
-Then, we compute deterministically the \cl{speciation} and \cl{extinction} rate from the \cl{diversification} rate and \cl{turnover} rate.
-{\tt \small \begin{snugshade*}
-\begin{lstlisting}
-speciation := diversification + turnover
-extinction := turnover
-\end{lstlisting}
-\end{snugshade*}}
-Instead, you could also use directly the speciation and extinction rates, \EG endowed with some diffuse exponential prior.
-{\tt \small \begin{snugshade*}
-\begin{lstlisting}
-# rescaling moves on speciation and extinction rates
-moves[++mi] = mvScale(diversification, lambda=1, tune=true, weight=3.0)
-moves[++mi] = mvScale(turnover, lambda=1, tune=true, weight=3.0)
+speciation ~ dnExponential(10.)
+extinction ~ dnExponential(10.)
+moves[++mi] = mvScale(speciation, lambda=1, tune=true, weight=3.0)
+moves[++mi] = mvScale(extinction, lambda=1, tune=true, weight=3.0)
 \end{lstlisting}
 \end{snugshade*}}
 The phylogeny that we used are obviously not a complete sample of all the species and you should take the incomplete sampling into account. We will simply use an empirical estimate of the fraction of species which we included in this study. For more information about incomplete taxon sampling see \cite{Hohna2011} and \cite{Hohna2014a}. 
@@ -532,8 +514,8 @@ pi_mol ~ dnDirichlet(pi_mol_prior)
 Now add the simplex scale move one each the exchangeability rates \cl{er\_mol} and the stationary frequencies \cl{pi\_mol} to the moves vector:
 {\tt \small \begin{snugshade*}
 \begin{lstlisting}
-moves[++mi] = mvSimplexElementScale(er_mol) 
-moves[++mi] = mvSimplexElementScale(pi_mol)  
+moves[++mi] = mvSimplexElementScale(er_mol,weight=15) 
+moves[++mi] = mvSimplexElementScale(pi_mol,weight=5)  
 \end{lstlisting}
 \end{snugshade*}}
 We can finish setting up this part of the model by creating a deterministic node for the GTR instantaneous-rate matrix \cl{Q\_mol}. 
@@ -571,17 +553,11 @@ moves[++mi] = mvScale(alpha, weight=2.0)
 \end{snugshade*}}
 This finishes the substitution process part of the model.
 
-Then next part of the model is the clock model. Here we need a clock model because we work on a time tree. We use our exponentiated uniform distribution to specify a flat prior distribution which is scale invariant.
+Then next part of the model is the clock model. Here we need a clock model because we work on a time tree. We use an exponential distribution with expectation 0.1.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-logClockRate ~ dnUniform(-5,5)
-clockRate := 10^logClockRate
-\end{lstlisting}
-\end{snugshade*}}
-We will apply a sliding window move to the \cl{\cl{logClockRate}}.
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-moves[++mi] = mvSlide(logClockRate, delta=0.1, tune=true, weight=2.0)
+clock_mol ~ dnExponential(10)
+moves[++mi] = mvScale(clock_mol, lambda=1, tune=true, weight=2.0)
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -589,12 +565,12 @@ Introduce a common prior for the molecular and biogeographical clocks.
 \begin{snugshade}
 \begin{lstlisting}
 clock_scale_bg  ~ dnGamma(2.0,2.0)
-clock_bg        := clockRate * clock_scale_bg
+clock_bg        := clock_mol * clock_scale_bg
 \end{lstlisting}
 \end{snugshade}
 
 Remember that you need to call the \cl{PhyloCTMC} constructor to include the new site-rate parameter:
-% This sentence was incomplete previously; I think the revised version is correct.
+
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 seq ~ dnPhyloCTMC(tree=psi, Q=Q_mol, siteRates=gamma_rates, branchRates=clockRate, type="DNA")
@@ -614,8 +590,8 @@ monitors[3] = mnFile(filename="output/biogeography_DEC_joint.trees", printgen=10
 \end{lstlisting}
 \end{snugshade*}}
 
+Create the range evolution model as before, being sure to use the same {\tt psi} and {\tt clock\_bg} from above.
 
-
-
+The remaining challenge is to compose both submodels together using {\tt model} and creating an MCMC object with {\tt mcmc}. Good luck!
 
 \newpage
